--- a/Udemy_In28Mins_Servlet_Jsp_WebApplication/pom.xml
+++ b/Udemy_In28Mins_Servlet_Jsp_WebApplication/pom.xml
@@ -37,6 +37,12 @@
 			<version>2.2.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
